--- a/views/jobs.html
+++ b/views/jobs.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>bootstrapsuperhero</title>
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel ="stylesheet" href="main.css">
+    <link rel ="stylesheet" href="../main.css">
+
+    <title>Jobs</title>
 </head>
 
 <body>
@@ -20,13 +22,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SuperSkilz</a>
+            <a class="navbar-brand" href="/">SuperSkilz</a>
           </div>
       
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/views/superhero.html">Superheroz</a></li>
+              <li><a href="/views/superhero.html">Superheroes</a></li>
               <li><a href="/views/jobs.html">Jobs</a></li> 
             </ul>
           </div><!-- /.navbar-collapse -->
