--- a/main.css
+++ b/main.css
@@ -23,3 +23,11 @@ h2 {
 .charImage {
     border-radius: 100%;
 }
+
+.maleImage {
+    border: 5px solid blue;
+}
+
+.femaleImage {
+    border: 5px solid pink;
+}
