--- a/views/jobs.html
+++ b/views/jobs.html
@@ -11,7 +11,7 @@
     <title>Jobs</title>
 </head>
 
-<body>
+<body class = "text-center">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -36,6 +36,17 @@
       </nav>
 </body>
     <h1>Jobs</h1>
+    <div class="btn-group">
+      <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Select a superhero <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" id = "awesome-dropdown"></ul>
+    </div>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src = "/javascript/jobs.js"></script>
 </body>
 </html>
