--- a/views/jobs.html
+++ b/views/jobs.html
@@ -35,13 +35,13 @@
         </div><!-- /.container-fluid -->
       </nav>
 </body>
-    <h1>Jobs</h1>
-    <div class="btn-group">
+    <div class="btn-group" id ="awesome-button">
       <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Select a superhero <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" id = "awesome-dropdown"></ul>
     </div>
+    <div id="selected-heroes"></div>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
